# shadow-of-truth

./: .gitignore  README.md
client/: Cargo.toml  rustfmt.toml
client/assets/models/: ball-bunny.json  bunny-ball.json  cube.dae  cube.json  ikosaeder.dae  ikosaeder.json  test-map.json
client/assets/scenes/lobby/: init.lua
client/assets/scripts/: init.lua  orbit.lua  rocket.lua  user.lua
client/assets/shaders/: phong.fragment.glsl  phong.vertex.glsl  shadow.fragment.glsl  shadow.vertex.glsl
client/src/: context.rs  events.rs  lua.rs  main.rs  network.rs  tracer.rs  user.rs
client/src/methatron/: behavior.rs  camera.rs  drawable.rs  error.rs  light.rs  material.rs  mod.rs  model.rs  node.rs  pump.rs  scene.rs  shader.rs  shadow.rs  vbo.rs
client/src/methatron/d2/: mod.rs  overlay.rs  text.rs
client/src/methatron/math/: matrix.rs  mod.rs  vector.rs
common/: Cargo.toml
common/src/: keys.rs  lib.rs
raw-assets/models/: bunny-ball.blend  cube.blend  test-map.blend
server/: Cargo.toml
server/data/: config.toml  server.key
server/src/: client.rs  config.rs  main.rs  message.rs  peer.rs
tools/: Cargo.toml  dae2json.js  dae2json.py
tools/src/: collada.rs  main.rs  truth.rs
