[package]
name = "shadow-of-truth"
version = "0.1.0"
authors = ["zacharias <gojira83@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "*"
gl = "*"
glutin = "*"
log = "*"
mlua = { version = "0.4.2", features = ["luajit", "vendored"]}
nanoid = "*"
serde = { version = "*", features = ["derive"]}
serde_cbor = "*"
serde_json = "*"