[package]
name = "shadow-of-truth-common"
version = "0.1.0"
authors = ["zacharias <gojira83@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
openssl = "*"
serde = {version = "*", features = ["derive"]}
serde_bytes = "*"
serde_cbor = "*"
tokio = { version = "*", features = ["full"]}