[package]
name = "tools"
version = "0.1.0"
authors = ["zacharias <gojira83@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
serde = {version = "*", features = ["derive"]}
serde-xml-rs = "*"
serde_json = "*"
serde_cbor = "*"